# PE-FastText

./: .gitignore  README.md  download.py  generators.py  pyproject.toml  train_model.py  train_model_og_dna.py
.specstory/: context.txt
DNA_experiments/: 1_train_BPE_tokenizer.py  2_hyper_tuning.py  3_real_vs_fake.py  4_train_models.py  5_benchmark.py  README.md  benchmark_results_bpe.csv  benchmark_results_kmer.csv  hg38_tokenizer.json
DNA_experiments/benchmark_datasets/: README.md
DNA_experiments/models/: README.md
examples/: clean_umap_comparison.py  umap_visualization_example.py
experiments/: compare_w2v_fasttext_umap.py  compare_w2v_fasttext_umap_motifs.py  gensim_fasttext_file_example.py  sanity_check_fasttext.py  train_fasttext_cami.py  train_model.py  train_model_og_dna.py
protein_experiments/: .modal.toml  README.md  modal_app.py  modal_app_simple.py  pretrain_sample.py  pretrain_uniref50.py  requirements.txt  requirements_analysis.txt  requirements_modal.txt  run_analysis.py  run_experiment.py  run_modal.py
protein_experiments/configs/: example_esm2.yaml  example_fasttext_baseline.yaml  example_fasttext_residue.yaml  example_fasttext_rope.yaml  example_pretrained_finetuned.yaml  example_pretrained_frozen.yaml  example_pretrained_rope.yaml  schema.yaml  temp_example_fasttext_residue.yaml  temp_pretrain_Pre-trained_Frozen.yaml  test_pretrained.yaml  tiny_test.yaml
protein_experiments/src/: __init__.py  data.py  experiment.py  plotting.py  pretrain.py
sanity_check/: README.md  modal_app.py  plotting.py  requirements.txt  run_checks.py
(+16 files in other folders)
